# dobriki

./: .gitignore  README.MD  docker-stack.yaml  package.json  pnpm-lock.yaml
app/: Dockerfile  mydatabase  pyproject.toml  requirements.txt
app/accounts/: models.py
app/auth/: urls.py  views.py
app/dobriki/: asgi.py  celery_settings.py  settings.py  urls.py  wsgi.py
app/feed/: models.py  serializers.py  urls.py  views.py
app/feed/migrations/: 0001_initial.py
app/progress/: __init__.py  admin.py  models.py  serializers.py  tasks.py  views.py
app/progress/migrations/: 0001_initial.py  0002_dailyprogress_aim.py
app/progress/services/: progress.py
web/: .env  .gitignore  README.md  components.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
web/public/: manifest.json  service-worker.js  sw.js.map
web/src/: declarations.d.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/activity/: page.tsx
web/src/app/app/: layout.tsx  page.tsx
web/src/app/backend/: [...path].ts
web/src/app/dashboard/: layout.tsx
web/src/app/digest/: page.tsx
web/src/app/form/: layout.tsx  page.tsx
web/src/app/home/: page.tsx
web/src/app/profile/: page.tsx
web/src/config/: auth-config-base.ts  auth-config.ts  service-worker.ts  serviceWorkerRegistration.ts
web/src/entities/charity/: hooks.ts
web/src/icons/: activity-run.tsx  activity.tsx  back.tsx  big-dobrik.tsx  chevron-right.tsx  dobrik.tsx  heart.tsx  home-smile.tsx  home.tsx  index.ts  pause.tsx  player.tsx  trend-up.tsx  user.tsx
web/src/shared/: api.ts  hooks.ts  routes.ts  utils.ts
web/src/worker/: types.ts  worker.ts
(+130 files in other folders)
