[tool.poetry]
name = "dobriki"
version = "0.1.0"
description = ""
authors = ["AIDDN"]
license = "MIT2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


# django packages
Django = "4.1.7"
django-admin-autocomplete-filter = "*"
django-admin-rangefilter = "*"
django-auth-ldap = "*"
django-celery-beat = "*"
django-extensions = "*"
django-filter = "*"
django-fsm = "*"
django-fsm-admin = "*"
django-fsm-log = "*"
django-guardian = "*"
django-import-export = "*"
django-mptt = "*"
django-nose = "*"
django-ordered-model = "*"
django-redis = "*"
django-simple-history = "*"
django-sql-explorer = "*"
django-storages = "*"
djangorestframework = "*"
djangorestframework-dataclasses = "*"
djangorestframework-camel-case = "*"
djangorestframework-guardian = "*"
drf-yasg = "*"


# other packages
boto3 = "1.26.96"
celery = "5.2.3"
factory-boy = "*"
flower = "*"
furl = "*"
gunicorn = "21.2.0"
ipython = "*"
mimesis = "*"
openpyxl = "*"
psycopg2-binary = "2.9.5"
pyhumps = "*"
python-dateutil = "*"
pytils = "*"
requests = "*"
tablib = "*"
ujson = "*"
vine = "*"
Werkzeug = "*"
drf-chunked-upload = "^0.5.1"
drf-nested-routers = "^0.93.4"
django-cors-headers = "^3.12.0"
Pillow = "^9.2.0"
docxtpl = "^0.16.4"
zstd = "^1.5.2.6"
pydantic = "^1.10.5"
django-solo = "^2.0.0"
django-select2 = "^8.1.1"
django-light = "^0.1.0.post3"
django-json-widget = "^1.1.1"
django-etc = "^1.4.0"

fusionauth-client = "^1.47.0"
Authlib = "^1.2.0"
mozilla-django-oidc = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
